WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58793
Reproducible crash in Find on Page, on pages that use accelerated compositing
https://bugs.webkit.org/show_bug.cgi?id=58793
Summary
Reproducible crash in Find on Page, on pages that use accelerated compositing
Anders Carlsson
Reported
2011-04-18 09:50:47 PDT
Reproducible crash in Find on Page, on pages that use accelerated compositing
Attachments
Patch
(1.92 KB, patch)
2011-04-18 09:52 PDT
,
Anders Carlsson
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-04-18 09:52:10 PDT
Created
attachment 90045
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-04-18 09:54:24 PDT
Comment on
attachment 90045
[details]
Patch No test? :-(
Anders Carlsson
Comment 3
2011-04-18 09:55:19 PDT
Committed
r84153
: <
http://trac.webkit.org/changeset/84153
>
WebKit Review Bot
Comment 4
2011-04-18 12:20:59 PDT
http://trac.webkit.org/changeset/84153
might have broken GTK Linux 32-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug